[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-orchestrator-demo"
version = "0.1.0"
description = "LLM + LangGraph orchestrator demo with Retrieval/Action workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.50",
  "langchain-core>=0.3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
